manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business
  labels:
    app: business
spec:
  replicas: 1
  selector:
    matchLabels:
      app: business
  template:
    metadata:
      labels:
        app: business
    spec:
      containers:
      - name: business
        image: preranamauryaa/microservice-businessservice:latest
        ports:
        - containerPort: 5055
        readinessProbe:
          httpGet:
            path: /business
            port: 5055
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /business
            port: 5055
          initialDelaySeconds: 15
          periodSeconds: 20
