manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: business-service
  labels:
    app: business-service
spec:
  type: LoadBalancer
  selector:
    app: business
  ports:
  - protocol: TCP
    port: 80     
    targetPort: 5055
