manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: business-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-external 
                port:
                  number: 80        
    - http:
        paths:
          - path: /business
            pathType: Prefix
            backend:
              service:
                name: business-service  
                port:
                  number: 80
